Only print error message if there were in fact errors in getHostFQDNs

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Minor - P4
    • 4.4.19, 5.0.15, 6.3.0-rc0, 6.0.5
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Change getHostFQDNs() function to 1) not call getNameInfoErrors.push_back() with blanks, and 2) debug print the results vector so we can actually see what we are returning. This way we won't print error message when there was no error, ex.:

      {"t":\{"$date":"2023-01-16T15:43:17.618+00:00"},"s":"D3", "c":"NETWORK",  "id":23171,   "ctx":"conn63","msg":"Failed to obtain name info","attr":{"errors":["","","","","",""]}}
      

      This came from HELP-40780 where client is seeing the above error line even though there is are no actual errors.

            Assignee:
            Adi Zaimi (Inactive)
            Reporter:
            Adi Zaimi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: