SERVER-73176: Only print actual error message in getHostFQDNs