src/mongo/util/net/hostname_canonicalization.cpp
@@ -107,7 +107,6 @@ std::vector<std::string> getHostFQDNs(std::string hostName, HostnameCanonicaliza
 
     std::vector<std::string> getNameInfoErrors;
     for (shim_addrinfo* p = info; p; p = p->ai_next) {
-        std::stringstream getNameInfoError;
         shim_char host[NI_MAXHOST] = {};
         if ((err = shim_getnameinfo(
                  p->ai_addr, p->ai_addrlen, host, sizeof(host), nullptr, 0, NI_NAMEREQD)) == 0) {
@@ -126,6 +125,7 @@ std::vector<std::string> getHostFQDNs(std::string hostName, HostnameCanonicaliza
                 sin_addr = reinterpret_cast<void*>(&addr_in6->sin6_addr);
             }
 
+            std::stringstream getNameInfoError;
             if (sin_addr) {
                 invariant(inet_ntop(p->ai_family, sin_addr, ip_str, sizeof(ip_str)) != nullptr);
                 getNameInfoError << ip_str;
@@ -134,8 +134,8 @@ std::vector<std::string> getHostFQDNs(std::string hostName, HostnameCanonicaliza
             }
 
             getNameInfoError << ": \"" << getAddrInfoStrError(err);
+            getNameInfoErrors.push_back(getNameInfoError.str());
         }
-        getNameInfoErrors.push_back(getNameInfoError.str());
     }
 
     if (!getNameInfoErrors.empty()) {
@@ -145,6 +145,8 @@ std::vector<std::string> getHostFQDNs(std::string hostName, HostnameCanonicaliza
                     "Failed to obtain name info",
                     "errors"_attr = getNameInfoErrors);
     }
+
+    LOGV2_DEBUG(7317600, 4, "Name info: {results}", "Name info", "results"_attr = results);
 
     // Deduplicate the results list
     std::sort(results.begin(), results.end());
